# lua-hapi

./: .gitmodules  CMakeLists.txt  README.mkd
examples/: SpringDemo.lua  log.lua
examples/in-progress/: attract.lua  sine.lua
src/: AnyHapticsDevice.cpp  AnyHapticsDevice.h  AutoRef.h  BindingFwd.h  CMakeLists.txt  ClassInfo.cpp  ClassInfo.h  DepthMapSurface.cpp  DepthMapSurface.h  DeviceLog.cpp  DeviceLog.h  EnableVec3OutValues.h  EntactHapticsDevice.cpp  EntactHapticsDevice.h  FalconHapticsDevice.cpp  FalconHapticsDevice.h  FeedbackBufferCollector.cpp  FeedbackBufferCollector.h  ForceDimensionHapticsDevice.cpp  ForceDimensionHapticsDevice.h  ForwardingMacros.h  ForwardingMacrosUndef.h  FrictionSurface.cpp  FrictionSurface.h  GodObjectRenderer.cpp  GodObjectRenderer.h  HAPIForceEffect.cpp  HAPIForceEffect.h  HAPIForceEffectSubclass.h  HAPIFrictionSurface.cpp  HAPIFrictionSurface.h  HAPIFunctionObject.cpp  HAPIFunctionObject.h  HAPIGLShape.cpp  HAPIGLShape.h  HAPIHapticObject.cpp  HAPIHapticObject.h  HAPIHapticShape.cpp  HAPIHapticShape.h  HAPIHapticsDevice.cpp  (+78 more)
src/bind_h3dutil/: Vec2.cpp  Vec2.h  Vector.cpp  Vector.h  VectorBinding.h  VectorFwd.h  VectorOf.h  VectorTraits.h
src/test/: CMakeLists.txt  class_info.lua  devicelog.lua  module.lua  parsed_function.lua  testrunner.bat.in  vector.lua
submodules/: CMakeLists.txt
